improving footer styles to prevent page cutoff, adding icons to delete and played buttons

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -20,17 +20,30 @@
 }
 
 /* Basic styling */
+
+html, body {
+    margin: 0;
+    height: 100%;
+}
+
 body {
     font-family: Urbanist, sans-serif;
     line-height: 1.6;
-    margin: 0;
     padding: 0;
     color: #333;
 }
+
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    height: 100%;
+}
+
 header {
     background: #333;
     color: #fff;
-    min-height: 70px;
+    /* min-height: 70px; */
     border-bottom: #000 4px solid;
 }
 .header-container {
@@ -71,10 +84,11 @@ header nav {
     float: left;
 }
 .container {
-    display: flex; 
-    width: 100%; 
-    margin: auto;
-    overflow: hidden;
+    display: flex;
+    width: 100%;
+    height: 100%; 
+    margin: 0;
+    overflow: visible;
 }
 .sidebar {
     width: 300px; 
@@ -118,6 +132,7 @@ footer {
     border-top: #000 1px solid;
     padding: 5px;
     padding-left: 20px;
+    margin-top: auto;
 }
 
 /* Table Styling */
@@ -224,6 +239,36 @@ button:hover {
     background-color: #155ab6; 
 }
 
+.btn-danger {
+    background-color: #dc3545;
+    color:#fff;
+    text-align: center;
+}
+
+.btn-danger:hover {
+    background-color: #9b1b28; /* Darker red on hover */
+}
+
+.btn-success {
+    background-color: #28a745; /* Green background */
+    color: #fff; /* White text */
+    text-align: center;
+}
+
+.btn-success:hover {
+    background-color: #218838; /* Darker green on hover */
+}
+
+.btn-warning {
+    background-color: #ffc107; /* Yellow background */
+    color: #212529; /* Dark text */
+    text-align: center;
+}
+
+.btn-warning:hover {
+    background-color: #e0a800; /* Darker yellow on hover */
+}
+
 /* Upvote Button Styling */
 .upvote-button {
     background-color: green; 
@@ -261,6 +306,11 @@ button:hover {
     body {
         font-family: Urbanist, sans-serif;
     }
+
+    header {
+        min-height: 202px;
+    }
+
     .header-container {
         width: 100%;
         max-width: 1200px;
@@ -270,6 +320,7 @@ button:hover {
     .container {
         flex-direction: column; /* Stack sidebar and content vertically */
         width: 100%;
+        height: auto;
     }
 
     .sidebar {
@@ -339,4 +390,6 @@ button:hover {
         padding-left: 0px;
         text-align: center;
     }
+
+
 }
